--- a/entradas/inscripcion.html
+++ b/entradas/inscripcion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,7 +19,9 @@
     <header>
       <div class="container">
         <div class="logo">
-          <a href="#"><img src="../images/plantilla/logo.png" alt="logo"/></a>
+          <a href="../index.html"
+            ><img src="../images/plantilla/logo.png" alt="Logo Manguca"
+          /></a>
         </div>
         <div class="navbar">
           <div class="icon-bar" onclick="Show()">
@@ -122,7 +124,8 @@
         </div>
       </div>
     </main>
-    <footer>
+     <!-- FOOTER -->
+     <footer>
       <div class="footer">
         <div class="about">
           <div class="colabout">
@@ -132,23 +135,21 @@
                 >Contactar por correo</a
               >
             </div>
-
             <div>
-              <a href="./informacion/invitados.html">Voluntariado</a>
+              <a href="../informacion/footer/voluntariado.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
             <div>
-              <a href="../informacion/bases/torneos.html">Bases de Torneos</a>
+              <a href="../informacion/footer/torneos.html">Bases de Torneos</a>
             </div>
             <div>
-              <a href="../informacion/bases/concursos.html"
+              <a href="../informacion/footer/concursos.html"
                 >Bases de Concursos</a
               >
             </div>
-
             <div>
-              <a href="../informacion/bases/politica.html"
+              <a href="../informacion/footer/politica.html"
                 >Política de privacidad
               </a>
             </div>
@@ -169,6 +170,7 @@
         </div>
       </div>
     </footer>
+    <!-- SCRIPTS -->
     <script src="../js/validacion-formulario.js"></script>
     <script src="../js/scroll.js"></script>
     <script src="../js/sidebar.js"></script>
