--- a/informacion/invitados.html
+++ b/informacion/invitados.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,10 +8,10 @@
       href="https://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
     />
-    <!-- CSS Main Layout-->
-    <link rel="stylesheet" href="../css/invitados.css" />
-
+    <!-- CSS Main Layout -->
     <link rel="stylesheet" href="../css/layout.css" />
+    <!-- CSS Invitados -->
+    <link rel="stylesheet" href="../css/invitados.css" />
     <title>MANGUCA</title>
   </head>
   <body>
@@ -21,7 +21,7 @@
       <div class="header" id="header">
         <div class="logo">
           <a href="../index.html"
-            ><img src="../images/plantilla/logo.png" alt="logo"
+            ><img src="../images/plantilla/logo.png" alt="Logo Manguca"
           /></a>
         </div>
         <div class="navbar">
