--- a/informacion/invitados/overwatchvoices.html
+++ b/informacion/invitados/overwatchvoices.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,7 +19,9 @@
     <header>
       <div class="container">
         <div class="logo">
-          <a href="../../index.html"><img src="../../images/plantilla/logo.png" alt="logo"/></a>
+          <a href="../../index.html"
+            ><img src="../../images/plantilla/logo.png" alt="logo"
+          /></a>
         </div>
         <div class="navbar">
           <div class="icon-bar" onclick="Show()">
@@ -35,148 +37,152 @@
                   Información &#9660;
                 </button>
                 <div class="dropdown-content">
-                  <a id="font" href="../informacion/invitados.html">Invitados</a>
+                  <a id="font" href="../informacion/invitados.html"
+                    >Invitados</a
+                  >
                   <a href="../informacion/actividades.html">Actividades</a>
                   <a href="../informacion/concursos.html">Concursos</a>
                 </div>
               </div>
             </li>
             <li><a href="../../horarios/horarios.html">Horarios</a></li>
-            <li><a href="../../localizacion/localizacion.html">Localización</a></li>
+            <li>
+              <a href="../../localizacion/localizacion.html">Localización</a>
+            </li>
             <li><a href="../../entradas/inscripcion.html">Entradas</a></li>
           </ul>
         </div>
-      </header>
       </div>
-      <main>
-        <div class="main">
-          <div class="content">
-            <div class="sidebar">
-              <a href="./faky.html">Faky</a>
-              <a href="./kiki.html">Kiki vivi lily</a>
-              <a href="./odashima.html">Odashima</a>
-              <a href="./shirogane.html">Shirogane</a>
-              <a href="./sukisha.html">Sukisha</a>
-              <a href="./laia.html">Laia López</a>
-              <a href="./ginny.html">Ginni Di</a>
-              <a href="./meowri.html">Jenna Lynn</a>
-              <a href="./halex.html">H. Alexander</a>
-              <a href="./ladybeard.html">Lady Beard</a>
-              <a class="active" href="./overwatchvoices.html"
-                >Voces de Overwatch</a
-              >
-              <a href="./poltattoo.html">Pol Tattoo</a>
-            </div>
-            <div class="information-box">
-              <div class="breadcrumb">
-                <ul>
-                  <li><a href="../../index.html">Inicio</a></li>
-                  <li><a href="../invitados.html">Invitados</a></li>
-                  <li><a href="./overwatchvoices.html">Voces Overwatch</a></li>
-                </ul>
-              </div>
-              <div class="titleBox">
-                <div id="title">
-                  <span>Voces de Overwatch</span>
-                </div>
-              </div>
-              <div class="information">
-                <div class="picture">
-                  <img src="../../images/artistas/artist11-avatar.jpg" />
-                </div>
-                <article>
-                  <p>
-                    Chloé Hollings es una actriz, artista de voz, escritora y
-                    cantante francesa, británica y australiana. Nació en París,
-                    Francia, pero pasó sus primeros años en Melbourne, Australia.
-                    Estos dos orígenes magníficos pero muy diferentes la han
-                    convertido en quien es: una artista versátil, sedienta de
-                    conocimiento, que busca la belleza en todo. Como actriz,
-                    trabajó principalmente en el teatro, pero es mejor conocida
-                    por su aparición en el programa de televisión francés
-                    «Versailles", Valerian and the City of a Thousand Planets, de
-                    Luc Besson, y por dar voz al famoso personaje de Overwatch:
-                    Widowmaker. También es autora de una memoria publicada en
-                    Francia en 2016.
-                  </p>
-                  <p>
-                    Anjali Bhimani proporciona la voz del héroe Symmetra en
-                    Overwatch. Nació y creció en California y se graduó de la
-                    Universidad Northwestern con un certificado en teatro musical.
-                    Ella ha actuado en Broadway y también tiene una exitosa
-                    carrera en pantalla. Ella es más conocida por su papel de Nina
-                    Patel en el popular programa de televisión estadounidense
-                    Modern Family.
-                  </p>
-  
-                  <div class="iframe">
-                    <iframe
-                      width="560"
-                      height="315"
-                      src="https://www.youtube.com/embed/UrfvQHbEocs"
-                      frameborder="0"
-                      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                      allowfullscreen
-                    ></iframe>
-                  </div>
-                </article>
-              </div>
-            </div>
+    </header>
+    <main>
+      <div class="main">
+        <div class="content">
+          <div class="sidebar">
+            <a href="./faky.html">Faky</a>
+            <a href="./kiki.html">Kiki vivi lily</a>
+            <a href="./odashima.html">Odashima</a>
+            <a href="./shirogane.html">Shirogane</a>
+            <a href="./sukisha.html">Sukisha</a>
+            <a href="./laia.html">Laia López</a>
+            <a href="./ginny.html">Ginni Di</a>
+            <a href="./meowri.html">Jenna Lynn</a>
+            <a href="./halex.html">H. Alexander</a>
+            <a href="./ladybeard.html">Lady Beard</a>
+            <a class="active" href="./overwatchvoices.html"
+              >Voces de Overwatch</a
+            >
+            <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
-        </div>
-      </main>
-      <footer>
-        <div class="footer">
-          <div class="about">
-            <div class="colabout">
-              <div>
-                <a
-                  href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-                  >Contactar por correo</a
-                >
-              </div>
-  
-              <div>
-                <a href="../informacion/invitados.html">Voluntariado</a>
+          <div class="information-box">
+            <div class="breadcrumb">
+              <ul>
+                <li><a href="../../index.html">Inicio</a></li>
+                <li><a href="../invitados.html">Invitados</a></li>
+                <li><a href="./overwatchvoices.html">Voces Overwatch</a></li>
+              </ul>
+            </div>
+            <div class="titleBox">
+              <div id="title">
+                <span>Voces de Overwatch</span>
               </div>
             </div>
-            <div class="colabout">
-              <div>
-                <a href="../bases/torneos.html">Bases de Torneos</a>
+            <div class="information">
+              <div class="picture">
+                <img src="../../images/artistas/artist11-avatar.jpg" />
               </div>
-              <div>
-                <a href="../bases/concursos.html">Bases de Concursos</a>
-              </div>
-              <div>
-                <a href="../bases/politica.html">Política de privacidad</a>
-              </div>
-            </div>
-          </div>
-          <div class="contacto">
-            <div class="contactos">
-              <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
-              <img
-                id="iconos"
-                src="../../images/iconos/twitter.png"
-                alt="Twitter"
-              />
-              <img
-                id="iconos"
-                src="../../images/iconos/facebook.png"
-                alt="Facebook"
-              />
-              <img
-                id="iconos"
-                src="../../images/iconos/insta.png"
-                alt="Instagram"
-              />
-            </div>
-            <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
-          </div>
-        </div>
-      </footer>
-      <script src="../../js/scroll.js"></script>
-      <script src="../../js/sidebar.js"></script>
+              <article>
+                <p>
+                  Chloé Hollings es una actriz, artista de voz, escritora y
+                  cantante francesa, británica y australiana. Nació en París,
+                  Francia, pero pasó sus primeros años en Melbourne, Australia.
+                  Estos dos orígenes magníficos pero muy diferentes la han
+                  convertido en quien es: una artista versátil, sedienta de
+                  conocimiento, que busca la belleza en todo. Como actriz,
+                  trabajó principalmente en el teatro, pero es mejor conocida
+                  por su aparición en el programa de televisión francés
+                  «Versailles", Valerian and the City of a Thousand Planets, de
+                  Luc Besson, y por dar voz al famoso personaje de Overwatch:
+                  Widowmaker. También es autora de una memoria publicada en
+                  Francia en 2016.
+                </p>
+                <p>
+                  Anjali Bhimani proporciona la voz del héroe Symmetra en
+                  Overwatch. Nació y creció en California y se graduó de la
+                  Universidad Northwestern con un certificado en teatro musical.
+                  Ella ha actuado en Broadway y también tiene una exitosa
+                  carrera en pantalla. Ella es más conocida por su papel de Nina
+                  Patel en el popular programa de televisión estadounidense
+                  Modern Family.
+                </p>
 
+                <div class="iframe">
+                  <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/UrfvQHbEocs"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!-- FOOTER -->
+    <footer>
+      <div class="footer">
+        <div class="about">
+          <div class="colabout">
+            <div>
+              <a
+                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                >Contactar por correo</a
+              >
+            </div>
+            <div>
+              <a href="../footer/voluntariado.html">Voluntariado</a>
+            </div>
+          </div>
+          <div class="colabout">
+            <div>
+              <a href="../footer/torneos.html">Bases de Torneos</a>
+            </div>
+            <div>
+              <a href="../footer/concursos.html">Bases de Concursos</a>
+            </div>
+            <div>
+              <a href="../footer/politica.html">Política de privacidad</a>
+            </div>
+          </div>
+        </div>
+        <div class="contacto">
+          <div class="contactos">
+            <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
+            <img
+              id="iconos"
+              src="../../images/iconos/twitter.png"
+              alt="Twitter"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/facebook.png"
+              alt="Facebook"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/insta.png"
+              alt="Instagram"
+            />
+          </div>
+          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
+        </div>
+      </div>
+    </footer>
+    <!-- SCRIPTS -->
+    <script src="../../js/scroll.js"></script>
+    <script src="../../js/sidebar.js"></script>
   </body>
 </html>
