--- a/informacion/invitados/ginny.html
+++ b/informacion/invitados/ginny.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,7 +19,9 @@
     <header>
       <div class="container">
         <div class="logo">
-          <a href="../../index.html"><img src="../../images/plantilla/logo.png" alt="logo"/></a>
+          <a href="../../index.html"
+            ><img src="../../images/plantilla/logo.png" alt="logo"
+          /></a>
         </div>
         <div class="navbar">
           <div class="icon-bar" onclick="Show()">
@@ -35,148 +37,152 @@
                   Información &#9660;
                 </button>
                 <div class="dropdown-content">
-                  <a id="font" href="../informacion/invitados.html">Invitados</a>
+                  <a id="font" href="../informacion/invitados.html"
+                    >Invitados</a
+                  >
                   <a href="../informacion/actividades.html">Actividades</a>
                   <a href="../informacion/concursos.html">Concursos</a>
                 </div>
               </div>
             </li>
             <li><a href="../../horarios/horarios.html">Horarios</a></li>
-            <li><a href="../../localizacion/localizacion.html">Localización</a></li>
+            <li>
+              <a href="../../localizacion/localizacion.html">Localización</a>
+            </li>
             <li><a href="../../entradas/inscripcion.html">Entradas</a></li>
           </ul>
         </div>
-      </header>
       </div>
-      <main>
-        <div class="main">
-          <div class="content">
-            <div class="sidebar">
-              <a href="./faky.html">Faky</a>
-              <a href="./kiki.html">Kiki vivi lily</a>
-              <a href="./odashima.html">Odashima</a>
-              <a href="./shirogane.html">Shirogane</a>
-              <a href="./sukisha.html">Sukisha</a>
-              <a href="./laia.html">Laia López</a>
-              <a class="active" href="./ginny.html">Ginni Di</a>
-              <a href="./meowri.html">Jenna Lynn</a>
-              <a href="./halex.html">H. Alexander</a>
-              <a href="./ladybeard.html">Lady Beard</a>
-              <a href="./overwatchvoices.html">Voces de Overwatch</a>
-              <a href="./poltattoo.html">Pol Tattoo</a>
+    </header>
+    <main>
+      <div class="main">
+        <div class="content">
+          <div class="sidebar">
+            <a href="./faky.html">Faky</a>
+            <a href="./kiki.html">Kiki vivi lily</a>
+            <a href="./odashima.html">Odashima</a>
+            <a href="./shirogane.html">Shirogane</a>
+            <a href="./sukisha.html">Sukisha</a>
+            <a href="./laia.html">Laia López</a>
+            <a class="active" href="./ginny.html">Ginni Di</a>
+            <a href="./meowri.html">Jenna Lynn</a>
+            <a href="./halex.html">H. Alexander</a>
+            <a href="./ladybeard.html">Lady Beard</a>
+            <a href="./overwatchvoices.html">Voces de Overwatch</a>
+            <a href="./poltattoo.html">Pol Tattoo</a>
+          </div>
+          <div class="information-box">
+            <div class="breadcrumb">
+              <ul>
+                <li><a href="../../index.html">Inicio</a></li>
+                <li><a href="../invitados.html">Invitados</a></li>
+                <li><a href="./ginny.html">Ginny Di</a></li>
+              </ul>
             </div>
-            <div class="information-box">
-              <div class="breadcrumb">
-                <ul>
-                  <li><a href="../../index.html">Inicio</a></li>
-                  <li><a href="../invitados.html">Invitados</a></li>
-                  <li><a href="./ginny.html">Ginny Di</a></li>
-                </ul>
+            <div class="titleBox">
+              <div id="title">
+                <span>Ginny Di</span>
               </div>
-              <div class="titleBox">
-                <div id="title">
-                  <span>Ginny Di</span>
+            </div>
+            <div class="information">
+              <div class="picture">
+                <img src="../../images/artistas/artist7-avatar.jpg" />
+              </div>
+              <article>
+                <p>
+                  Ginny Di es una cosplayer, YouTuber y cantante de Denver, cuyo
+                  repertorio incluye cosplays profesionales, sketches de comedia
+                  y videos de música. Empezó su carrera en el sector de las
+                  páginas web en 2011, uniéndose más tarde al grupo Not
+                  Literally Productions en YouTube, donde se hizo conocida por
+                  crear parodias musicales de pop muy pegadizas sobre Harry
+                  Potter, Juego de Tronos, Doctor Who…
+                </p>
+                <div class="iframe">
+                  <img
+                    src="../../images/artistas/artist7-banner.jpg"
+                    id="picture-article"
+                  />
                 </div>
-              </div>
-              <div class="information">
-                <div class="picture">
-                  <img src="../../images/artistas/artist7-avatar.jpg" />
+                <p>
+                  En 2014 decidió triunfar en solitario, y se empezó a hacer muy
+                  popular debido a sus cosplays de Arya de Juego de Tronos y de
+                  Jester de Critical Role. Sus cosplays inspirados en mujeres
+                  vintage se hicieron virales rápidamente, al igual que su traje
+                  de centauro completamente articulado de la película Fantasía
+                  de Disney. Ginny dirige ahora su propio negocio creando
+                  disfraces realmente detallados y escribiendo, produciendo y
+                  protagonizando videos musicales y sketches sobre fandoms y
+                  juegos de mesa.
+                </p>
+                <div class="iframe">
+                  <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/QOawH-IZI0U"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
                 </div>
-                <article>
-                  <p>
-                    Ginny Di es una cosplayer, YouTuber y cantante de Denver, cuyo
-                    repertorio incluye cosplays profesionales, sketches de comedia
-                    y videos de música. Empezó su carrera en el sector de las
-                    páginas web en 2011, uniéndose más tarde al grupo Not
-                    Literally Productions en YouTube, donde se hizo conocida por
-                    crear parodias musicales de pop muy pegadizas sobre Harry
-                    Potter, Juego de Tronos, Doctor Who…
-                  </p>
-                  <div class="iframe">
-                    <img
-                      src="../../images/artistas/artist7-banner.jpg"
-                      id="picture-article"
-                    />
-                  </div>
-                  <p>
-                    En 2014 decidió triunfar en solitario, y se empezó a hacer muy
-                    popular debido a sus cosplays de Arya de Juego de Tronos y de
-                    Jester de Critical Role. Sus cosplays inspirados en mujeres
-                    vintage se hicieron virales rápidamente, al igual que su traje
-                    de centauro completamente articulado de la película Fantasía
-                    de Disney. Ginny dirige ahora su propio negocio creando
-                    disfraces realmente detallados y escribiendo, produciendo y
-                    protagonizando videos musicales y sketches sobre fandoms y
-                    juegos de mesa.
-                  </p>
-                  <div class="iframe">
-                    <iframe
-                      width="560"
-                      height="315"
-                      src="https://www.youtube.com/embed/QOawH-IZI0U"
-                      frameborder="0"
-                      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                      allowfullscreen
-                    ></iframe>
-                  </div>
-                </article>
-              </div>
+              </article>
             </div>
           </div>
         </div>
-      </main>
-      <footer>
-        <div class="footer">
-          <div class="about">
-            <div class="colabout">
-              <div>
-                <a
-                  href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-                  >Contactar por correo</a
-                >
-              </div>
-  
-              <div>
-                <a href="../informacion/invitados.html">Voluntariado</a>
-              </div>
+      </div>
+    </main>
+    <!-- FOOTER -->
+    <footer>
+      <div class="footer">
+        <div class="about">
+          <div class="colabout">
+            <div>
+              <a
+                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                >Contactar por correo</a
+              >
             </div>
-            <div class="colabout">
-              <div>
-                <a href="../bases/torneos.html">Bases de Torneos</a>
-              </div>
-              <div>
-                <a href="../bases/concursos.html">Bases de Concursos</a>
-              </div>
-              <div>
-                <a href="../bases/politica.html">Política de privacidad</a>
-              </div>
+            <div>
+              <a href="../footer/voluntariado.html">Voluntariado</a>
             </div>
           </div>
-          <div class="contacto">
-            <div class="contactos">
-              <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
-              <img
-                id="iconos"
-                src="../../images/iconos/twitter.png"
-                alt="Twitter"
-              />
-              <img
-                id="iconos"
-                src="../../images/iconos/facebook.png"
-                alt="Facebook"
-              />
-              <img
-                id="iconos"
-                src="../../images/iconos/insta.png"
-                alt="Instagram"
-              />
+          <div class="colabout">
+            <div>
+              <a href="../footer/torneos.html">Bases de Torneos</a>
             </div>
-            <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
+            <div>
+              <a href="../footer/concursos.html">Bases de Concursos</a>
+            </div>
+            <div>
+              <a href="../footer/politica.html">Política de privacidad</a>
+            </div>
           </div>
         </div>
-      </footer>
-      <script src="../../js/scroll.js"></script>
-      <script src="../../js/sidebar.js"></script>
-
+        <div class="contacto">
+          <div class="contactos">
+            <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
+            <img
+              id="iconos"
+              src="../../images/iconos/twitter.png"
+              alt="Twitter"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/facebook.png"
+              alt="Facebook"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/insta.png"
+              alt="Instagram"
+            />
+          </div>
+          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
+        </div>
+      </div>
+    </footer>
+    <!-- SCRIPTS -->
+    <script src="../../js/scroll.js"></script>
+    <script src="../../js/sidebar.js"></script>
   </body>
 </html>
