--- a/informacion/invitados/poltattoo.html
+++ b/informacion/invitados/poltattoo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,7 +19,9 @@
     <header>
       <div class="container">
         <div class="logo">
-          <a href="../../index.html"><img src="../../images/plantilla/logo.png" alt="logo"/></a>
+          <a href="../../index.html"
+            ><img src="../../images/plantilla/logo.png" alt="logo"
+          /></a>
         </div>
         <div class="navbar">
           <div class="icon-bar" onclick="Show()">
@@ -35,130 +37,134 @@
                   Información &#9660;
                 </button>
                 <div class="dropdown-content">
-                  <a id="font" href="../informacion/invitados.html">Invitados</a>
+                  <a id="font" href="../informacion/invitados.html"
+                    >Invitados</a
+                  >
                   <a href="../informacion/actividades.html">Actividades</a>
                   <a href="../informacion/concursos.html">Concursos</a>
                 </div>
               </div>
             </li>
             <li><a href="../../horarios/horarios.html">Horarios</a></li>
-            <li><a href="../../localizacion/localizacion.html">Localización</a></li>
+            <li>
+              <a href="../../localizacion/localizacion.html">Localización</a>
+            </li>
             <li><a href="../../entradas/inscripcion.html">Entradas</a></li>
           </ul>
         </div>
-      </header>
       </div>
-      <main>
-        <div class="main">
-          <div class="content">
-            <div class="sidebar">
-              <a href="./faky.html">Faky</a>
-              <a href="./kiki.html">Kiki vivi lily</a>
-              <a href="./odashima.html">Odashima</a>
-              <a href="./shirogane.html">Shirogane</a>
-              <a href="./sukisha.html">Sukisha</a>
-              <a href="./laia.html">Laia López</a>
-              <a href="./ginny.html">Ginni Di</a>
-              <a href="./meowri.html">Jenna Lynn</a>
-              <a href="./halex.html">H. Alexander</a>
-              <a href="./ladybeard.html">Lady Beard</a>
-              <a href="./overwatchvoices.html">Voces de Overwatch</a>
-              <a class="active" href="./poltattoo.html">Pol Tattoo</a>
+    </header>
+    <main>
+      <div class="main">
+        <div class="content">
+          <div class="sidebar">
+            <a href="./faky.html">Faky</a>
+            <a href="./kiki.html">Kiki vivi lily</a>
+            <a href="./odashima.html">Odashima</a>
+            <a href="./shirogane.html">Shirogane</a>
+            <a href="./sukisha.html">Sukisha</a>
+            <a href="./laia.html">Laia López</a>
+            <a href="./ginny.html">Ginni Di</a>
+            <a href="./meowri.html">Jenna Lynn</a>
+            <a href="./halex.html">H. Alexander</a>
+            <a href="./ladybeard.html">Lady Beard</a>
+            <a href="./overwatchvoices.html">Voces de Overwatch</a>
+            <a class="active" href="./poltattoo.html">Pol Tattoo</a>
+          </div>
+          <div class="information-box">
+            <div class="breadcrumb">
+              <ul>
+                <li><a href="../../index.html">Inicio</a></li>
+                <li><a href="../invitados.html">Invitados</a></li>
+                <li><a href="./poltattoo.html">Pol Tattoo</a></li>
+              </ul>
             </div>
-            <div class="information-box">
-              <div class="breadcrumb">
-                <ul>
-                  <li><a href="../../index.html">Inicio</a></li>
-                  <li><a href="../invitados.html">Invitados</a></li>
-                  <li><a href="./poltattoo.html">Pol Tattoo</a></li>
-                </ul>
+            <div class="titleBox">
+              <div id="title">
+                <span>Pol Tattoo</span>
               </div>
-              <div class="titleBox">
-                <div id="title">
-                  <span>Pol Tattoo</span>
+            </div>
+            <div class="information">
+              <div class="picture">
+                <img src="../../images/artistas/artist12-avatar.jpg" />
+              </div>
+              <article>
+                <p>
+                  Empezó con el grafiti, continuó con la pintura y ahora se
+                  lanza al tatuaje… hasta de piezas arqueológicas. Es la
+                  historia de Samuel Martínez (Jerez, 1987), conocido
+                  artísticamente por el nombre de Pol Tattoo. Cuando era un
+                  chaval y comenzó con el bachillerato artístico pasaba más
+                  tiempo “fuera de la calle pintando grafitis que en clase”. Así
+                  dejaba por todos los rincones de Jerez la palabra “Swing”.
+                  Ahora Pol Tattoo tiene estudio propio en su ciudad natal y se
+                  anima a iniciar proyectos como el que este sábado ha tenido
+                  por primera vez en el Museo Arqueológico de Jerez.
+                </p>
+                <div class="iframe">
+                  <img
+                    src="../../images/artistas/artist12-banner.jpg"
+                    id="picture-article"
+                  />
                 </div>
-              </div>
-              <div class="information">
-                <div class="picture">
-                  <img src="../../images/artistas/artist12-avatar.jpg" />
-                </div>
-                <article>
-                  <p>
-                    Empezó con el grafiti, continuó con la pintura y ahora se
-                    lanza al tatuaje… hasta de piezas arqueológicas. Es la
-                    historia de Samuel Martínez (Jerez, 1987), conocido
-                    artísticamente por el nombre de Pol Tattoo. Cuando era un
-                    chaval y comenzó con el bachillerato artístico pasaba más
-                    tiempo “fuera de la calle pintando grafitis que en clase”. Así
-                    dejaba por todos los rincones de Jerez la palabra “Swing”.
-                    Ahora Pol Tattoo tiene estudio propio en su ciudad natal y se
-                    anima a iniciar proyectos como el que este sábado ha tenido
-                    por primera vez en el Museo Arqueológico de Jerez.
-                  </p>
-                  <div class="iframe">
-                    <img
-                      src="../../images/artistas/artist12-banner.jpg"
-                      id="picture-article"
-                    />
-                  </div>
-                </article>
-              </div>
+              </article>
             </div>
           </div>
         </div>
-      </main>
-      <footer>
-        <div class="footer">
-          <div class="about">
-            <div class="colabout">
-              <div>
-                <a
-                  href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
-                  >Contactar por correo</a
-                >
-              </div>
-  
-              <div>
-                <a href="../informacion/invitados.html">Voluntariado</a>
-              </div>
+      </div>
+    </main>
+    <!-- FOOTER -->
+    <footer>
+      <div class="footer">
+        <div class="about">
+          <div class="colabout">
+            <div>
+              <a
+                href="mailto:ucamanguca@gmail.com?Subject=Atención%20al%20cliente"
+                >Contactar por correo</a
+              >
             </div>
-            <div class="colabout">
-              <div>
-                <a href="../bases/torneos.html">Bases de Torneos</a>
-              </div>
-              <div>
-                <a href="../bases/concursos.html">Bases de Concursos</a>
-              </div>
-              <div>
-                <a href="../bases/politica.html">Política de privacidad</a>
-              </div>
+            <div>
+              <a href="../footer/voluntariado.html">Voluntariado</a>
             </div>
           </div>
-          <div class="contacto">
-            <div class="contactos">
-              <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
-              <img
-                id="iconos"
-                src="../../images/iconos/twitter.png"
-                alt="Twitter"
-              />
-              <img
-                id="iconos"
-                src="../../images/iconos/facebook.png"
-                alt="Facebook"
-              />
-              <img
-                id="iconos"
-                src="../../images/iconos/insta.png"
-                alt="Instagram"
-              />
+          <div class="colabout">
+            <div>
+              <a href="../footer/torneos.html">Bases de Torneos</a>
             </div>
-            <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
+            <div>
+              <a href="../footer/concursos.html">Bases de Concursos</a>
+            </div>
+            <div>
+              <a href="../footer/politica.html">Política de privacidad</a>
+            </div>
           </div>
         </div>
-      </footer>
-      <script src="../../js/scroll.js"></script>
-      <script src="../../js/sidebar.js"></script>
-
+        <div class="contacto">
+          <div class="contactos">
+            <img id="iconos" src="../../images/iconos/rss.png" alt="RSS" />
+            <img
+              id="iconos"
+              src="../../images/iconos/twitter.png"
+              alt="Twitter"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/facebook.png"
+              alt="Facebook"
+            />
+            <img
+              id="iconos"
+              src="../../images/iconos/insta.png"
+              alt="Instagram"
+            />
+          </div>
+          <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
+        </div>
+      </div>
+    </footer>
+    <!-- SCRIPTS -->
+    <script src="../../js/scroll.js"></script>
+    <script src="../../js/sidebar.js"></script>
   </body>
 </html>
