--- a/entradas/inscripcion.html
+++ b/entradas/inscripcion.html
@@ -37,18 +37,23 @@
                   Información &#9660;
                 </button>
                 <div class="dropdown-content">
-                  <a id="font" href="../informacion/invitados.html">Invitados</a>
+                  <a id="font" href="../informacion/invitados.html"
+                    >Invitados</a
+                  >
                   <a href="../informacion/actividades.html">Actividades</a>
                   <a href="../informacion/concursos.html">Concursos</a>
                 </div>
               </div>
             </li>
             <li><a href="../horarios/horarios.html">Horarios</a></li>
-            <li><a href="../localizacion/localizacion.html">Localización</a></li>
+            <li>
+              <a href="../localizacion/localizacion.html">Localización</a>
+            </li>
             <li><a href="../entradas/inscripcion.html">Entradas</a></li>
           </ul>
         </div>
       </div>
+    </header>
     <main>
       <div class="main">
         <div class="breadcrumb">
@@ -124,8 +129,8 @@
         </div>
       </div>
     </main>
-     <!-- FOOTER -->
-     <footer>
+    <!-- FOOTER -->
+    <footer>
       <div class="footer">
         <div class="about">
           <div class="colabout">
