--- a/localizacion/localizacion.html
+++ b/localizacion/localizacion.html
@@ -147,14 +147,22 @@
         </div>
         <div class="contacto">
           <div class="contactos">
-            <img id="iconos" src="../images/iconos/rss.png" alt="RSS" />
-            <img id="iconos" src="../images/iconos/twitter.png" alt="Twitter" />
+            <img id="iconos" src="../images/iconos/rss.png" alt="Icono RSS" />
+            <img
+              id="iconos"
+              src="../images/iconos/twitter.png"
+              alt="Icono Twitter"
+            />
             <img
               id="iconos"
               src="../images/iconos/facebook.png"
-              alt="Facebook"
+              alt="Icono Facebook"
             />
-            <img id="iconos" src="../images/iconos/insta.png" alt="Instagram" />
+            <img
+              id="iconos"
+              src="../images/iconos/insta.png"
+              alt="Icono Instagram"
+            />
           </div>
           <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
         </div>
